gke/deployment-api.yaml
# Copyright 2019 Mulesoft.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License

#
# Deployment configuration for application API
#

apiVersion: apps/v1
kind: Deployment
metadata:
  name: arc-api
  labels:
    app: apic-ci-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: arc-api
      tier: api
  template:
    metadata:
      labels:
        app: arc-api
        tier: api
    spec:
      volumes:
      - name: google-cloud-key
        secret:
          secretName: apic-ci-key
      containers:
      - name: apic-ci
        image: gcr.io/advancedrestclient-1155/apic-ci-api:0.2.1
        volumeMounts:
        - name: google-cloud-key
          mountPath: /var/secrets/google
        imagePullPolicy: Always
        ports:
        - name: http-server
          containerPort: 8080
