gke/deployment-catalog.yaml
# Copyright 2019 Mulesoft.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License

#
# Deployment configuration for ARC components catalog
#

apiVersion: apps/v1
kind: Deployment
metadata:
  name: apic-catalog
  labels:
    app: apic-catalog
spec:
  replicas: 1
  selector:
    matchLabels:
      app: apic-catalog-frontend
      tier: frontend
  template:
    metadata:
      labels:
        app: apic-catalog-frontend
        tier: frontend
    spec:
      volumes:
      - name: google-cloud-key
        secret:
          secretName: apic-ci-key
      containers:
      - name: apic-catalog
        image: gcr.io/advancedrestclient-1155/apic-catalog
        volumeMounts:
        - name: google-cloud-key
          mountPath: /var/secrets/google
        imagePullPolicy: Always
        ports:
        - name: http-server
          containerPort: 8080
