gke/deployment-status.yaml
# Copyright 2019 Mulesoft.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License

#
# Deployment configuration for Status App UI (front end)
#

apiVersion: apps/v1
kind: Deployment
metadata:
  name: apic-ci-status
  labels:
    app: apic-ci
spec:
  replicas: 2
  selector:
    matchLabels:
      app: apic-ci
      tier: frontend
  template:
    metadata:
      labels:
        app: apic-ci
        tier: frontend
    spec:
      volumes:
      - name: google-cloud-key
        secret:
          secretName: apic-ci-key
      containers:
      - name: apic-ci
        image: gcr.io/advancedrestclient-1155/apic-ci-status:0.2.12
        volumeMounts:
        - name: google-cloud-key
          mountPath: /var/secrets/google
        # This setting makes nodes pull the docker image every time before
        # starting the pod. This is useful when debugging, but should be turned
        # off in production.
        imagePullPolicy: Always
        # The app process listens on port 8080 for web traffic by default.
        ports:
        - name: http-server
          containerPort: 8080
