gke/memcache-pod.yaml
# https://github.com/GoogleCloudPlatform/memcached-docker/blob/master/1/README.md
apiVersion: v1
kind: Pod
metadata:
  name: apic-ci-memcached
  labels:
    name: apic-ci-memcached
spec:
  containers:
    - image: launcher.gcr.io/google/memcached1
      name: memcached
