gke/service-apicci-api.yaml
apiVersion: v1
kind: Service
metadata:
  name: arc-api
  labels:
    app: apic-ci-api
spec:
  type: NodePort
  selector:
    app: arc-api
    tier: api
  ports:
  - port: 8080
    targetPort: 8080
