gke/service-apicci-catalog.yaml
apiVersion: v1
kind: Service
metadata:
  name: apic-catalog
  labels:
    app: apic-catalog
spec:
  type: NodePort
  selector:
    app: apic-catalog-frontend
    tier: frontend
  ports:
  - port: 8080
    targetPort: 8080
