gke/service-apicci-status.yaml
apiVersion: v1
kind: Service
metadata:
  name: apic-ci-status
  labels:
    app: apic-ci
spec:
  type: NodePort
  selector:
    app: apic-ci
    tier: frontend
  ports:
  - port: 8080
    targetPort: 8080
